@@ -1,5 +1,11 @@
 2012-01-22  Andrew Okin  <razorblades13@gmail.com>
 
+	* MainWindow.cs: You can now install mods through a file
+	chooser by right clicking on an instance and clicking "Add
+	Mods"
+
+2012-01-22  Andrew Okin  <razorblades13@gmail.com>
+
 	* Instance.cs: Added MCJar property for getting the instance's
 	minecraft.jar
 
